<resources>
    <string name="app_name">Owl Chat</string>

    <!-- TODO: Add all Strings in Strings resource file -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>
    <string name="action_users">Users</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="send_Message">Send Message</string>
    <string name="add_room">Add Room</string>
    <string name="next_button">Next Button</string>
    <string name="back_button">Back Button</string>
    <string name="user_image">User Image</string>
   <string name="login_room">Login</string>
    <string name="entre_room">Entre Room</string>
    <string name="owl_image">Owl Image</string>
    <string name="chat_gif">Chat Gif</string>
    <string name="entre_message">Entre Message</string>
    <string name="send_Button_click">SendMessage</string>
    <string name="create_room">Create Room</string>
    <string name="room_name1">Room Name :</string>
    <string name="room_name2">Room Name </string>
    <string name="room_password1">Room Password :</string>
    <string name="room_password2">Room Password </string>
    <string name="room_passwordCon1">Confirm :</string>
    <string name="room">Rooms</string>
    <string name="userinfo">UserInfo</string>
    <string name="room_passwordCon2">Confirm Room Password</string>
    <string name="remem_me">Remeber me</string>
    <string name="login_room1">Login Room</string>
    <string name="room_first_char">First Char</string>
    <string name="my_rooms">My Rooms</string>
    <string name="login_first">Login to Start Chat</string>
    <string name="success_mess">Add Room Successfully </string>
    <string name="errpr_login">Login Password Invalid</string>
    <string name="cancel">Cancel</string>
    <string name="login">Try Again</string>
    <string name="cancel_no_need">Cancel ,No need !</string>
    <string name="enable">Enable !</string>
    <string name="network_problems">Network Problems</string>
    <string name="check_network_mess">Please Check Network Connection , Enable Wifi or HotSpot !</string>
    <string name="error_mess">Please Check your Password again or Entre a Room Name </string>
    <string name="AppDesc">Hey there , this app is used to make anonymous Chat , it act as Sarraha but Chat not Messages from no Where Comes , It`s very easy to use you Can Swap to Know more .</string>
</resources>
