<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivityPackage.Welcome1"
    android:background="@color/BUTT"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/owlbigger"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/owl_image"
        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:textSize="30sp"
         android:textColor="@color/White"
         android:textStyle="italic"
         android:fontFamily="serif"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:text="@string/AppDesc"
         android:textColor="@color/White"
        android:paddingTop="30dp"
        android:textSize="16sp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
    />

</LinearLayout>