<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NetworkDialogs.CheckNetworkDialog"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:background="@drawable/circ_dialog_shape">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/smartphone"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/ErrorImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/network_problems"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ErrorImage"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/NetworkErrorText"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_network_mess"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/Gray"
        app:layout_constraintTop_toBottomOf="@id/NetworkErrorText"
        android:padding="10dp"
        android:id="@+id/NetworkErrorDesc1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/Gray"
        app:layout_constraintTop_toBottomOf="@id/NetworkErrorDesc1"
        android:padding="10dp"
        android:id="@+id/NetworkErrorDesc2"
        />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_round_shape"
        android:padding="10dp"
        android:text="@string/cancel_no_need"
        android:textAllCaps="false"
        android:textColor="@color/White"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NetworkErrorDesc2" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_round_shape"
        android:text="@string/enable"
        android:textColor="@color/White"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/NetworkErrorDesc2"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:id="@+id/Okay"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        />
</android.support.constraint.ConstraintLayout>